fix: add user authorization
