# api/openapi/bots.yaml
@@ -8,6 +8,8 @@ servers:
     variables:
       hostname:
         default: localhost:8400
+security:
+  - bearerAuth: []
 
 paths:
   /bots:
@@ -21,10 +23,32 @@ paths:
             schema:
               $ref: '#/components/schemas/PostBots'
       responses:
-        '201':
+        201:
           description: TODO
-        '400':
+        400:
           description: TODO
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        401:
+          description: Missing JWT token in header
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+
+    get:
+      operationId: getBots
+      responses:
+        200:
+          description: TODO
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/GetBots'
+        401:
+          description: Missing JWT token in header
           content:
             application/json:
               schema:
@@ -42,13 +66,25 @@ paths:
           required: true
           description: TODO
       responses:
-        '200':
+        200:
           description: TODO
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/Bot'
-        '404':
+        401:
+          description: Missing JWT token in header
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        403:
+          description: TODO
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        404:
           description: TODO
           content:
             application/json:
@@ -67,11 +103,23 @@ paths:
           required: true
           description: TODO
       responses:
-        '200':
+        200:
           description: TODO
           content:
             text/csv: {}
-        '404':
+        401:
+          description: Missing JWT token in header
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        403:
+          description: TODO
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        404:
           description: TODO
           content:
             application/json:
@@ -90,9 +138,21 @@ paths:
           required: true
           description: TODO
       responses:
-        '200':
+        200:
           description: TODO
-        '404':
+        401:
+          description: Missing JWT token in header
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        403:
+          description: TODO
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        404:
           description: TODO
           content:
             application/json:
@@ -111,9 +171,21 @@ paths:
           required: true
           description: TODO
       responses:
-        '200':
+        200:
           description: TODO
-        '404':
+        401:
+          description: Missing JWT token in header
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        403:
+          description: TODO
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        404:
           description: TODO
           content:
             application/json:
@@ -248,6 +320,11 @@ components:
           type: array
           items:
             $ref: '#/components/schemas/Block'
+
+    GetBots:
+      type: array
+      items:
+        $ref: '#/components/schemas/Bot'
 
     Error:
       type: object
